<resources>
    <string name="_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accessibility_change_security_dialog_message">An accessibility service has been activated. It watches keyboard and windows.</string>
    <string name="accessibility_security_dialog_message">An accessibility service is active. It watches keyboard and windows.</string>
    <string name="account_email_already_used_error">This email address is already in use.</string>
    <string name="account_email_not_found_error">This email address was not found.</string>
    <string name="account_email_validation_error">Unable to verify email address. Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_message">Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_title">Verification Pending</string>
    <string name="account_phone_number_already_used_error">This phone number is already in use.</string>
    <string name="action_close">Close</string>
    <string name="action_edit_contact_form">Edit contact form</string>
    <string name="action_exit">Exit</string>
    <string name="action_forbidden">You are not authorized to perform this action</string>
    <string name="action_global_search">Global search</string>
    <string name="action_historical">Historical</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="auth_password_placeholder">Password</string>
    <string name="cancel">Cancel</string>
    <string name="community_id">Community Id</string>
    <string name="community_id_hint">example</string>
    <string name="community_name">Community name</string>
    <string name="community_name_hint">Example</string>
    <string name="deactivate_account_content">This will make your account permanently unusable. You will not be able to log in, and no one will be able to re-register the same user ID. This will cause your account to leave all rooms it is participating in, and it will remove your account details from your identity server. <b>This action is irreversible</b>".

Deactivating your account "<b>does not by default cause us to forget messages you have sent</b>". If you would like us to forget your messages, please tick the box below.

Message visibility in Matrix is similar to email. Our forgetting your messages means that messages you have sent will not be shared with any new or unregistered users, but registered users who already have access to these messages will still have access to their copy."</string>
    <string name="deactivate_account_delete_checkbox">Please forget all messages I have sent when my account is deactivated (Warning: this will cause future users to see an incomplete view of conversations)</string>
    <string name="deactivate_account_prompt_password">To continue, please enter your password:</string>
    <string name="deactivate_account_submit">Deactivate Account</string>
    <string name="deactivate_account_title">Deactivate Account</string>
    <string name="encryption_export_e2e_room_keys">Export E2E room keys</string>
    <string name="encryption_export_room_keys_summary">Export the keys to a local file</string>
    <string name="encryption_import_e2e_room_keys">Import E2E room keys</string>
    <string name="encryption_import_room_keys_summary">Import the keys from a local file</string>
    <string name="encryption_information_algorithm">Algorithm</string>
    <string name="encryption_information_claimed_ed25519_fingerprint_key">Claimed Ed25519 fingerprint key</string>
    <string name="encryption_information_curve25519_identity_key">Curve25519 identity key</string>
    <string name="encryption_information_decryption_error">Decryption error</string>
    <string name="encryption_information_device_id">Device ID</string>
    <string name="encryption_information_device_info">Event information</string>
    <string name="encryption_information_device_key">Device key</string>
    <string name="encryption_information_device_name">Device name</string>
    <string name="encryption_information_ed25519_fingerprint">Ed25519 fingerprint</string>
    <string name="encryption_information_name">Name</string>
    <string name="encryption_information_sender_device_information">Sender device information</string>
    <string name="encryption_information_session_id">Session ID</string>
    <string name="encryption_information_unknown_device">unknown device</string>
    <string name="encryption_information_user_id">User id</string>
    <string name="encryption_information_verification">Verification</string>
    <string name="font_size">Font size</string>
    <string name="password_hint">********</string>
    <string name="plus_sign">+</string>
    <string name="semicolon_sign">:</string>
    <string name="send_bug_report_rage_shake">Rage shake to report bug</string>
    <string name="settings_12_24_timestamps">Show timestamps in 12-hour format</string>
    <string name="settings_always_show_timestamps">Show timestamps for all messages</string>
    <string name="settings_background_sync">Background synchronization</string>
    <string name="settings_call_invitations">Call invitations</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_media_cache">Clear media cache</string>
    <string name="settings_contact">Local contacts</string>
    <string name="settings_contacts_app_permission">Contacts permission</string>
    <string name="settings_contacts_phonebook_country">Phonebook country</string>
    <string name="settings_containing_my_display_name">Msgs containing my display name</string>
    <string name="settings_containing_my_user_name">Msgs containing my user name</string>
    <string name="settings_cryptography">Cryptography</string>
    <string name="settings_deactivate_account_section">Deactivate account</string>
    <string name="settings_deactivate_my_account">Deactivate my account</string>
    <string name="settings_devices_list">Devices</string>
    <string name="settings_display_name">Display Name</string>
    <string name="settings_enable_all_notif">Enable notifications for this account</string>
    <string name="settings_enable_background_sync">Enable background sync</string>
    <string name="settings_enable_this_device">Enable notifications for this device</string>
    <string name="settings_hide_from_users_directory_summary">"Other users won't be able to find my account in their search results."</string>
    <string name="settings_hide_from_users_directory_title">Subscribe to the red list.</string>
    <string name="settings_ignored_users">Ignored users</string>
    <string name="settings_info_area_show">Show the info area</string>
    <string name="settings_invited_to_room">"When I'm invited to a room"</string>
    <string name="settings_keep_media">Keep media</string>
    <string name="settings_messages_in_group_chat">Msgs in group chats</string>
    <string name="settings_messages_in_one_to_one">Msgs in one-to-one chats</string>
    <string name="settings_messages_sent_by_bot">Messages sent by bot</string>
    <string name="settings_notification_privacy">Notification privacy</string>
    <string name="settings_notification_ringtone">Notification sound</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_targets">Notification Targets</string>
    <string name="settings_other">Other</string>
    <string name="settings_password">Password</string>
    <string name="settings_preview_media_before_sending">Preview media before sending</string>
    <string name="settings_profile_picture">Profile Picture</string>
    <string name="settings_select_country">Choose a country</string>
    <string name="settings_send_markdown">Markdown formatting</string>
    <string name="settings_send_markdown_summary">Format messages using markdown syntax before they are sent. This allows for advanced formatting such as using asterisks to display italic text.</string>
    <string name="settings_send_typing_notifs">Send typing notifications</string>
    <string name="settings_send_typing_notifs_summary">Let other users know that you are typing.</string>
    <string name="settings_set_sync_delay">Delay between each request</string>
    <string name="settings_show_avatar_display_name_changes_messages">Show account events</string>
    <string name="settings_show_join_leave_messages">Show join and leave events</string>
    <string name="settings_show_join_leave_messages_summary">Invites, kicks, and bans are unaffected.</string>
    <string name="settings_show_read_receipts">Show read receipts</string>
    <string name="settings_show_read_receipts_summary">Click on the read receipts for a detailed list.</string>
    <string name="settings_start_on_boot">Start on boot</string>
    <string name="settings_turn_screen_on">Turn the screen on for 3 seconds</string>
    <string name="settings_user_interface">User interface</string>
    <string name="settings_user_settings">User settings</string>
    <string name="settings_vibrate_on_mention">Vibrate when mentioning a user</string>
</resources>