<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="?dialogPreferredPadding" android:paddingTop="12.0dip" android:paddingRight="?dialogPreferredPadding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/encryption_information_device_info" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_user_id" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_user_id" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_curve25519_identity_key" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_curve25519_identity_key" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_claimed_ed25519_fingerprint_key" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_claimed_ed25519_fingerprint_key" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_algorithm" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_algorithm" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:id="@id/encrypted_info_decryption_error_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_decryption_error" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_decryption_error" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_session_id" />
        <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_session_id" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/encryption_information_sender_device_information" />
        <LinearLayout android:orientation="vertical" android:id="@id/encrypted_info_no_device_information_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="12.0sp" android:textStyle="italic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_unknown_device" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/encrypted_info_sender_device_information_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_name" />
            <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_name" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_device_id" />
            <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_device_id" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_verification" />
            <TextView android:textSize="12.0sp" android:id="@id/encrypted_info_verification" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/encryption_information_ed25519_fingerprint" />
            <TextView android:textSize="12.0sp" android:id="@id/encrypted_ed25519_fingerprint" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>