<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/deactivate_account_title" style="@style/VectorToolbarStyle" />
        <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/deactivate_account_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/deactivate_account_content" />
                <CheckBox android:gravity="top" android:id="@id/deactivate_account_erase_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/deactivate_account_delete_checkbox" android:layout_below="@id/deactivate_account_content" />
                <TextView android:id="@id/deactivate_account_prompt_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/deactivate_account_prompt_password" android:layout_below="@id/deactivate_account_erase_checkbox" />
                <EditText android:id="@id/deactivate_account_password" android:nextFocusDown="@id/login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/auth_password_placeholder" android:maxLines="1" android:layout_below="@id/deactivate_account_prompt_password" android:inputType="textPassword" />
                <Button android:textColor="@android:color/white" android:id="@id/deactivate_account_button_submit" android:background="@color/vector_green_color" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/deactivate_account_submit" android:layout_below="@id/deactivate_account_password" android:layout_alignParentRight="true" />
                <Button android:textColor="@android:color/white" android:id="@id/deactivate_account_button_cancel" android:background="@color/vector_green_color" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginRight="16.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/deactivate_account_button_submit" android:layout_alignTop="@id/deactivate_account_button_submit" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <FrameLayout android:id="@id/waiting_view" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:id="@id/search_progress" android:layout_width="60.0dip" android:layout_height="60.0dip" android:indeterminate="true" />
    </FrameLayout>
</merge>